--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Check-mate</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <link href="assets/css/libs/bootstrap.min.css" rel="stylesheet"/>
-    <script src="assets/js/tabs/tab-4-shell-assistant/shells.js"></script>
+
+    <script src="assets/js/persistence/tabs.js"></script>
     <script src="assets/js/libs/bootstrap.bundle.min.js"></script>
     <script src="assets/js/libs/jquery.js"></script>
     <script src="assets/js/libs/crypto.min.js"></script>
@@ -1016,7 +1017,7 @@
                         <!-- SHELL ASSISTANT - BIND SHELLS END -->
 
                         <!-- SHELL ASSISTANT - TRANSFER METHODS START -->
-                         <div class="tab-pane fade"
+                        <div class="tab-pane fade"
                              id="shell-assistant-transfer-methods"
                              role="tabpanel" style="height: 485px">
                             <div class="d-flex flex-column justify-content-between h-100">
@@ -1148,21 +1149,70 @@
                     <!-- Nested tabs for Enum 5 -->
                     <ul class="nav nav-tabs" id="checklist-assistant-tab" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link text-custom-dark-blue" id="enum5-sub1-tab" data-bs-toggle="tab"
-                               href="#enum5-sub1" role="tab">Enum 5 Sub 1</a>
+                            <a class="nav-link" id="checklist-assistant-web-checklist-nav" data-bs-toggle="tab"
+                               href="#checklist-assistant-web-checklist" role="tab">
+                                <img data-bs-toggle="tooltip"
+                                     data-bs-placement="right" title="Web - checklist"
+                                     src="assets/icons/navbar/tab-5-checklist-assistant/programing-languages.png"
+                                     width="25px" height="25px;">
+                            </a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-custom-dark-blue" id="enum5-sub2-tab" data-bs-toggle="tab"
-                               href="#enum5-sub2" role="tab">Enum 5 Sub 2</a>
+                            <a class="nav-link" id="checklist-assistant-linux-os-checklist-nav" data-bs-toggle="tab"
+                               href="#checklist-assistant-linux-os-checklist" role="tab">
+                                <img data-bs-toggle="tooltip"
+                                     data-bs-placement="right" title="Linux OS - checklist"
+                                     src="assets/icons/navbar/tab-5-checklist-assistant/linux.png"
+                                     width="25px" height="25px;">
+                            </a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" id="checklist-assistant-windows-os-checklist-nav" data-bs-toggle="tab"
+                               href="#checklist-assistant-windows-os-checklist" role="tab">
+                                <img data-bs-toggle="tooltip"
+                                     data-bs-placement="right" title="Windows OS - checklist"
+                                     src="assets/icons/navbar/tab-5-checklist-assistant/windows.png"
+                                     width="25px" height="25px;">
+                            </a>
+                        </li>
+
                     </ul>
-                    <div class="tab-content" id="enum5TabContent">
-                        <div class="tab-pane fade" id="enum5-sub1" role="tabpanel">
-                            <h4>Enum 5 Sub 1 Content</h4>
+                    <div class="tab-content" id="shell-assistant-tab-content">
+                        <div class="tab-pane fade"
+                             id="checklist-assistant-web-checklist"
+                             role="tabpanel" style="height: 485px">
+                            <div class="d-flex flex-column justify-content-between h-100">
+                                1
+
+                            </div>
                         </div>
-                        <div class="tab-pane fade" id="enum5-sub2" role="tabpanel">
-                            <h4>Enum 5 Sub 2 Content</h4>
+
+                        <div class="tab-pane fade"
+                             id="checklist-assistant-linux-os-checklist"
+                             role="tabpanel" style="height: 485px">
+                            <div class="d-flex flex-column justify-content-between h-100">
+                                2
+                            </div>
                         </div>
+
+                        <div class="tab-pane fade"
+                             id="checklist-assistant-windows-os-checklist"
+                             role="tabpanel" style="height: 485px">
+                            <div class="d-flex flex-column justify-content-between h-100">
+                                <table class="table table-responsive-sm table-hover table-striped">
+                                    <thead>
+                                        <th>ID</th>
+                                        <th>Check</th>
+                                    </thead>
+                                    <tbody id="web-general-checklist">
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
                 <!-- tab 5 (checklist assistant) end -->
@@ -1252,6 +1302,8 @@
 <script src="assets/js/tabs/tab-1-tooling.js"></script>
 <script src="assets/js/tabs/tab-2-enum-tooling.js"></script>
 <script src="assets/js/tabs/tab-3-exploit-assistant.js"></script>
+<script src="assets/js/tabs/tab-4-shell-assistant/shells.js"></script>
+<script src="assets/js/tabs/tab-5-checklist-assistant/checklist.js"></script>
 <!-- tab specific scripts end -->
 
 </body>
