--- a/test.html
+++ b/test.html
@@ -122,3 +122,116 @@ function printit ($string) {
     </script>
 </body>
 </html>
+
+<div class="tab-pane fade" id="checklist-assistant-XXXXX-tab" role="tabpanel">
+
+    <!-- Tab switcher Message listener START -->
+    <ul class="nav nav-tabs" id="checklist-assistant-XXXXX-XXXXX-tab" role="tablist">
+
+        <li class="nav-item">
+            <a class="btn" id="checklist-assistant-WEB-nav-item"
+               data-bs-toggle="tab" href="#checklist-assistant-postmessage-monitor-tab" role="tab">
+                <div class="d-flex justify-content-between">
+                    <img data-bs-toggle="tooltip"
+                         data-bs-placement="right" title="Postmessage monitor"
+                         src="assets/icons/navbar/tab-2-enum-tooling/subtab-4-message-listener/postmessage-monitor.png"
+                         width="25px" height="25px">
+                    <div class="ms-1 text-dark" style="font-size: 10px;"
+                         id="checklist-assistant-postmessage-monitor-count">
+                        0
+                    </div>
+                </div>
+            </a>
+        </li>
+
+        <li class="nav-item">
+            <a class="btn" id="checklist-assistant-cookie-monitor-nav-item"
+               data-bs-toggle="tab" href="#checklist-assistant-cookie-monitor-tab" role="tab">
+                <div class="d-flex justify-content-between">
+                    <img data-bs-toggle="tooltip"
+                         data-bs-placement="right" title="Cookie monitor"
+                         src="assets/icons/navbar/tab-2-enum-tooling/subtab-4-message-listener/cookie-monitor.png"
+                         width="25px" height="25px">
+                    <div class="ms-1 text-dark" style="font-size: 10px;"
+                         id="checklist-assistant-cookie-monitor-count">
+                        0
+                    </div>
+                </div>
+            </a>
+        </li>
+
+    </ul>
+    <!-- Tab switcher Message listener END -->
+
+    <div class="tab-content">
+        <div class="tab-pane fade show active mt-1" id="checklist-assistant-postmessage-monitor-tab"
+             style="height: 420px" role="tabpanel">
+
+            <h6>
+                Postmessage monitor: <br>
+                <small>
+                    <span class="current-tab-url"></span>
+                </small>
+            </h6>
+
+            <div class="form-group d-flex justify-content-between">
+                <input class="form-control w-75 me-1" type="text" id="search-postmessage-input"
+                       placeholder="Search...">
+                <button class="refresh-control btn btn-outline-danger w-25"
+                        value="postmessage-monitor-table-table-body"
+                        data-control-refresh-active="true">Stop refresh
+                </button>
+            </div>
+
+            <div>
+                <table id="postmessage-monitor-table"
+                       class="table table-responsive-sm table-hover table-striped">
+                    <thead>
+                    <th>Message</th>
+                    <th>Timestamp</th>
+                    </thead>
+                    <tbody id="postmessage-monitor-table-table-body" data-control-update="true">
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="tab-pane fade mt-1" id="checklist-assistant-cookie-monitor-tab"
+             style="height: 420px" role="tabpanel">
+
+            <h6>
+                Cookie monitor:
+                <br>
+                <small>
+                    <span class="current-tab-url"></span>
+                </small>
+            </h6>
+
+            <div class="form-group d-flex justify-content-between">
+                <input class="form-control w-75 me-1" type="text"
+                       id="search-cookie-monitor-input"
+                       placeholder="Search...">
+                <button class="refresh-control btn btn-outline-danger w-25"
+                        value="cookie-monitor-table-table-body"
+                        data-control-refresh-active="true">Stop refresh
+                </button>
+            </div>
+
+            <div>
+                <table id="cookie-monitor-table"
+                       class="table table-responsive-sm table-hover table-striped">
+                    <thead>
+                    <th>Action</th>
+                    <th>Cookie</th>
+                    <th>Path</th>
+                    <th>Timestamp</th>
+                    </thead>
+                    <tbody id="cookie-monitor-table-table-body" data-control-update="true">
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
