--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
                             <!-- tab switcher Message listener START -->
                             <ul class="nav nav-tabs" id="enum-tooling-message-listener-tab" role="tablist">
 
-                                <li class="nav-item">
+                                <li class="nav-item custom-nav-item-3rd-layer">
                                     <a class="btn" id="enum-tooling-postmessage-monitor-nav-item"
                                        data-bs-toggle="tab" href="#enum-tooling-postmessage-monitor-tab" role="tab">
                                         <div class="d-flex justify-content-between">
@@ -659,7 +659,7 @@
                                     </a>
                                 </li>
 
-                                <li class="nav-item">
+                                <li class="nav-item custom-nav-item-3rd-layer">
                                     <a class="btn" id="enum-tooling-cookie-monitor-nav-item"
                                        data-bs-toggle="tab" href="#enum-tooling-cookie-monitor-tab" role="tab">
                                         <div class="d-flex justify-content-between">
@@ -1187,7 +1187,7 @@
                              id="checklist-assistant-web-checklist"
                              role="tabpanel" style="height: 485px">
                             <div class="d-flex flex-column justify-content-between h-100">
-                                1
+
 
                             </div>
                         </div>
@@ -1203,6 +1203,9 @@
                         <div class="tab-pane fade"
                              id="checklist-assistant-windows-os-checklist"
                              role="tabpanel" style="height: 485px">
+                            <h4>
+                                Windows OS - checklist
+                            </h4>
                             <div class="d-flex flex-column justify-content-between h-100">
                                 <table class="table table-responsive-sm table-hover table-striped">
                                     <thead>
