--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Check-mate</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <link href="assets/css/libs/bootstrap.min.css" rel="stylesheet"/>
-    <script src="assets/js/persistence/tabs.js"></script>
+    <script src="assets/js/persistence/tabsPersistence.js"></script>
     <script src="assets/js/persistence/mutationObserver.js"></script>
 
     <script src="assets/js/libs/bootstrap.bundle.min.js"></script>
@@ -1189,6 +1189,25 @@
                             <div class="d-flex flex-column justify-content-between h-100">
 
 
+
+<!-- start -->
+                                <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                                  <li class="nav-item" role="presentation">
+                                    <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Home</button>
+                                  </li>
+                                  <li class="nav-item" role="presentation">
+                                    <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</button>
+                                  </li>
+                                  <li class="nav-item" role="presentation">
+                                    <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</button>
+                                  </li>
+                                </ul>
+                                <div class="tab-content" id="pills-tabContent">
+                                  <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">...1</div>
+                                  <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...2</div>
+                                  <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">..3.</div>
+                                </div>
+<!-- end -->
                             </div>
                         </div>
 
