--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <!-- Nested tabs for Tools START -->
                     <ul class="nav nav-tabs" id="toolsTab" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" id="encode_decode-tab" data-bs-toggle="tab"
+                            <a class="nav-link active" id="general-tooling-encode-decode" data-bs-toggle="tab"
                                href="#encode_decode" role="tab">
                                 <img data-bs-toggle="tooltip"
                                      data-bs-placement="right" title="Encoding & decoding"
@@ -157,7 +157,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="hash-tab" data-bs-toggle="tab"
+                            <a class="nav-link" id="general-tooling-hash-tab" data-bs-toggle="tab"
                                href="#hashing" role="tab">
                                 <img data-bs-toggle="tooltip"
                                      data-bs-placement="right" title="Hash generator and identifier"
@@ -166,7 +166,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="formatter-tab" data-bs-toggle="tab"
+                            <a class="nav-link" id="general-tooling-json-formatter" data-bs-toggle="tab"
                                href="#formatter" role="tab">
                                 <img data-bs-toggle="tooltip"
                                      data-bs-placement="right"
@@ -643,8 +643,8 @@
                             <!-- tab switcher Message listener START -->
                             <ul class="nav nav-tabs" id="enum-tooling-message-listener-tab" role="tablist">
 
-                                <li class="nav-item custom-nav-item-3rd-layer">
-                                    <a class="btn" id="enum-tooling-postmessage-monitor-nav-item"
+                                <li class="nav-item">
+                                    <a class="btn nav-link" id="enum-tooling-postmessage-monitor-nav-item"
                                        data-bs-toggle="tab" href="#enum-tooling-postmessage-monitor-tab" role="tab">
                                         <div class="d-flex justify-content-between">
                                             <img data-bs-toggle="tooltip"
@@ -659,8 +659,8 @@
                                     </a>
                                 </li>
 
-                                <li class="nav-item custom-nav-item-3rd-layer">
-                                    <a class="btn" id="enum-tooling-cookie-monitor-nav-item"
+                                <li class="nav-item">
+                                    <a class="btn nav-link" id="enum-tooling-cookie-monitor-nav-item"
                                        data-bs-toggle="tab" href="#enum-tooling-cookie-monitor-tab" role="tab">
                                         <div class="d-flex justify-content-between">
                                             <img data-bs-toggle="tooltip"
@@ -778,7 +778,7 @@
 
                     <div class="tab-content" id="exploit-assistant-tab-content">
                         <!-- tab 1 - csrf checker START -->
-                        <div class="tab-pane fade" id="exploit-assistant-csrf-checker"
+                        <div class="tab-pane fade show active"  id="exploit-assistant-csrf-checker"
                              role="tabpanel" style="height: 485px">
                             <div class="d-flex flex-column justify-content-between h-100">
                                 <div class="mt-2 mb-2">
