--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
 
                     <div class="tab-content" id="exploit-assistant-tab-content">
                         <!-- tab 1 - csrf checker START -->
-                        <div class="tab-pane fade show active"  id="exploit-assistant-csrf-checker"
+                        <div class="tab-pane fade show active" id="exploit-assistant-csrf-checker"
                              role="tabpanel" style="height: 485px">
                             <div class="d-flex flex-column justify-content-between h-100">
                                 <div class="mt-2 mb-2">
@@ -1183,31 +1183,81 @@
 
                     </ul>
                     <div class="tab-content" id="shell-assistant-tab-content">
-                        <div class="tab-pane fade"
+                        <div class="tab-pane fade active show"
                              id="checklist-assistant-web-checklist"
                              role="tabpanel" style="height: 485px">
                             <div class="d-flex flex-column justify-content-between h-100">
 
+                                <ul class="nav nav-tabs" id="checklist-assistant-web-checklist-tab" role="tablist">
 
+                                    <li class="nav-item">
+                                        <a class="btn nav-link" id="checklist-assistant-web-general-check"
+                                           data-bs-toggle="tab" href="#checklist-assistant-web-general-check-content"
+                                           role="tab">
+                                            <div class="d-flex justify-content-between">
+                                                <img data-bs-toggle="tooltip"
+                                                     data-bs-placement="right" title="General web-pentest checklist"
+                                                     src="assets/icons/navbar/tab-5-checklist-assistant/web/web-pentest-general.png"
+                                                     width="25px" height="25px">
+                                            </div>
+                                        </a>
+                                    </li>
 
-<!-- start -->
-                                <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-                                  <li class="nav-item" role="presentation">
-                                    <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Home</button>
-                                  </li>
-                                  <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</button>
-                                  </li>
-                                  <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</button>
-                                  </li>
+                                    <li class="nav-item">
+                                        <a class="btn nav-link" id="checklist-assistant-web-wordpress-check"
+                                           data-bs-toggle="tab" href="#checklist-assistant-web-wordpress-check-content"
+                                           role="tab">
+                                            <div class="d-flex justify-content-between">
+                                                <img data-bs-toggle="tooltip"
+                                                     data-bs-placement="right" title="Wordpress CMS checklist"
+                                                     src="assets/icons/navbar/tab-5-checklist-assistant/web/web-pentest-wordpress.png"
+                                                     width="25px" height="25px">
+                                            </div>
+                                        </a>
+                                    </li>
+
                                 </ul>
-                                <div class="tab-content" id="pills-tabContent">
-                                  <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">...1</div>
-                                  <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...2</div>
-                                  <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">..3.</div>
+
+                                <div class="tab-content h-100">
+                                    <div class="tab-pane fade show active h-100 mt-1"
+                                         id="checklist-assistant-web-general-check-content"
+                                         role="tabpanel">
+                                        <h6>
+                                            Web-pentest checklist (general)
+                                        </h6>
+
+                                        <div class="d-flex flex-column justify-content-between h-100">
+                                            <table class="table table-responsive-sm table-hover table-striped">
+                                                <thead>
+                                                <th>Check</th>
+                                                </thead>
+                                                <tbody id="web-general-pentest-checklist">
+                                                </tbody>
+                                            </table>
+                                        </div>
+
+                                    </div>
+
+                                    <div class="tab-pane fade mt-1 h-100"
+                                         id="checklist-assistant-web-wordpress-check-content" role="tabpanel">
+
+                                        <h6>
+                                            Wordpress pentest checklist
+                                        </h6>
+
+                                        <div class="d-flex flex-column justify-content-between h-100">
+                                            <table class="table table-responsive-sm table-hover table-striped">
+                                                <thead>
+                                                <th>Check</th>
+                                                </thead>
+                                                <tbody id="web-wordpress-pentest-checklist">
+                                                </tbody>
+                                            </table>
+                                        </div>
+
+                                    </div>
                                 </div>
-<!-- end -->
+
                             </div>
                         </div>
 
@@ -1215,29 +1265,98 @@
                              id="checklist-assistant-linux-os-checklist"
                              role="tabpanel" style="height: 485px">
                             <div class="d-flex flex-column justify-content-between h-100">
-                                2
+
+                                <ul class="nav nav-tabs" id="checklist-assistant-linux-privesc-tab" role="tablist">
+
+                                    <li class="nav-item">
+                                        <a class="btn nav-link" id="checklist-assistant-linux-privesc"
+                                           data-bs-toggle="tab" href="#checklist-assistant-linux-privesc-content"
+                                           role="tab">
+                                            <div class="d-flex justify-content-between">
+                                                <img data-bs-toggle="tooltip"
+                                                     data-bs-placement="right"
+                                                     title="Linux privilege escalation checklist (general)"
+                                                     src="assets/icons/navbar/tab-5-checklist-assistant/linux/privilege-escalation.png"
+                                                     width="25px" height="25px">
+                                            </div>
+                                        </a>
+                                    </li>
+
+                                </ul>
+
+                                <div class="tab-content h-100">
+                                    <div class="tab-pane fade show active h-100 mt-1"
+                                         id="checklist-assistant-linux-privesc-content"
+                                         role="tabpanel">
+
+                                        <h6>
+                                            Linux privilege escalation checklist (general)
+                                        </h6>
+
+                                        <div class="d-flex flex-column justify-content-between h-100">
+                                            <table class="table table-responsive-sm table-hover table-striped">
+                                                <thead>
+<!--                                                <th>ID</th>-->
+                                                <th>Check</th>
+                                                </thead>
+                                                <tbody id="linux-general-privesc-checklist">
+                                                </tbody>
+                                            </table>
+                                        </div>
+
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
+
 
                         <div class="tab-pane fade"
                              id="checklist-assistant-windows-os-checklist"
                              role="tabpanel" style="height: 485px">
-                            <h4>
-                                Windows OS - checklist
-                            </h4>
                             <div class="d-flex flex-column justify-content-between h-100">
-                                <table class="table table-responsive-sm table-hover table-striped">
-                                    <thead>
-                                        <th>ID</th>
-                                        <th>Check</th>
-                                    </thead>
-                                    <tbody id="web-general-checklist">
-                                    </tbody>
-                                </table>
+
+                                <ul class="nav nav-tabs" id="checklist-assistant-windows-privesc-tab" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="btn nav-link" id="checklist-assistant-windows-privesc"
+                                           data-bs-toggle="tab" href="#checklist-assistant-windows-privesc-content"
+                                           role="tab">
+                                            <div class="d-flex justify-content-between">
+                                                <img data-bs-toggle="tooltip"
+                                                     data-bs-placement="right"
+                                                     title="Windows privilege escalation checklist (general)"
+                                                     src="assets/icons/navbar/tab-5-checklist-assistant/windows/privilege-escalation.png"
+                                                     width="25px" height="25px">
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+
+                                <div class="tab-content h-100">
+                                    <div class="tab-pane fade show active h-100 mt-1"
+                                         id="checklist-assistant-windows-privesc-content"
+                                         role="tabpanel">
+
+                                        <h6>
+                                            Windows privilege escalation checklist (general)
+                                        </h6>
+
+                                        <div class="d-flex flex-column justify-content-between h-100">
+                                            <table class="table table-responsive-sm table-hover table-striped">
+                                                <thead>
+<!--                                                <th>ID</th>-->
+                                                <th>Check</th>
+                                                </thead>
+                                                <tbody id="windows-general-privesc-checklist">
+                                                </tbody>
+                                            </table>
+                                        </div>
+
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
-
-
                     </div>
                 </div>
                 <!-- tab 5 (checklist assistant) end -->
