--- a/index.html
+++ b/index.html
@@ -175,6 +175,16 @@
                                      width="25px" height="25px;">
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="general-tooling-code-highlighter" data-bs-toggle="tab"
+                               href="#general-tooling-code-highlighter-content" role="tab">
+                                <img data-bs-toggle="tooltip"
+                                     data-bs-placement="right"
+                                     title="Code Highlighter"
+                                     src="assets/icons/navbar/tab-1-gen-tooling/code-highlighting.png"
+                                     width="25px" height="25px;">
+                            </a>
+                        </li>
                     </ul>
                     <!-- Nested tabs for Tools END -->
 
@@ -410,6 +420,17 @@
                             </div>
                         </div>
                         <!-- Formatter tab END -->
+                        <div class="tab-pane fade"
+                             id="general-tooling-code-highlighter-content"
+                             role="tabpanel" style="height: 485px">
+                            <div class="d-flex flex-column justify-content-between h-100">
+                                <div class="mt-2 mb-2">
+                                    <h4> Code Highlighter </h4>
+                                </div>
+
+
+                            </div>
+                        </div>
 
                     </div>
                     <!-- tab 1 content END -->
@@ -1296,7 +1317,6 @@
                                         <div class="d-flex flex-column justify-content-between h-100">
                                             <table class="table table-responsive-sm table-hover table-striped">
                                                 <thead>
-<!--                                                <th>ID</th>-->
                                                 <th>Check</th>
                                                 </thead>
                                                 <tbody id="linux-general-privesc-checklist">
@@ -1344,7 +1364,6 @@
                                         <div class="d-flex flex-column justify-content-between h-100">
                                             <table class="table table-responsive-sm table-hover table-striped">
                                                 <thead>
-<!--                                                <th>ID</th>-->
                                                 <th>Check</th>
                                                 </thead>
                                                 <tbody id="windows-general-privesc-checklist">
