added 2 bugfixes to code highlighter

--- a/index.html
+++ b/index.html
@@ -473,9 +473,9 @@
                                 <div class="mb-4 mt-1" style="height:160px;">
                                     <span>Output</span>
                                     <div class="d-flex justify-content-between rounded border h-100">
-                                        <pre class="p-0" style="overflow-y: scroll;"
+                                        <pre class="p-0 h-100 w-100" style="overflow-y: scroll;"
                                              id="general-tooling-code-highlighter-output-pre"><code
-                                                class="h-100 p-2 language-plaintext rounded"
+                                                class="h-100 w-100 p-2 language-plaintext rounded"
                                                 style="width: 100%; white-space: pre-wrap"></code></pre>
                                         <a href="#" class="d-flex flex-column justify-content-end" style="width: 6%">
 
